fix text alignment in nav menu

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -209,8 +209,10 @@ a {
       .trigger {
         padding-top: 20px;
       }
+      
       .custom-nav-link {
         display: block;
+        text-align: left;
 
         &:last-child {
           margin-bottom: 10px;
